# maskininl-rning_AI_codealong

./: .gitignore  README.md  gemini_intro.ipynb  hello.py  pyproject.toml
09_lancedb_vector_database/: lancedb_basics.ipynb
10_pydantic_rags/: pdfs_to_text.py
10_pydantic_rags/backend/: constants.py
exports/: image_description.md
video_alongs/03_gemini/: pyproject.toml
video_alongs/05_06_pydantic_gemini/: cheap_houses.csv  pydantic_gemini_robust.ipynb
video_alongs/05_pydantic_gemini/: gemini_pydantic.ipynb
video_alongs/06_fastapi_crud/: api.py  data_processing.py  try_my_api.ipynb
video_alongs/07_b_pydantic_fastapi/: data_models.py  movies_api.py  setup_db.py  utils.py
video_alongs/07_b_pydantic_fastapi/data/: movies.duckdb
video_alongs/07_pydantic_ai/: pydantic_fundamentals.ipynb
video_alongs/08_pydantic_chatbot/: chat.py  chat_eda.ipynb  frontentd.py
video_alongs/09_lancedb_vector_database/: lancedb_basics.ipynb
video_alongs/pydantic_basics/: person.json  pydantic_api.ipynb  pydantic_basics.ipynb  pyproject.toml
