[project]
name = "maskininl-rning-ai-codealong"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "fastapi>=0.122.0",
    "google-generativeai>=0.8.5",
    "lancedb>=0.25.3",
    "pandas>=2.3.3",
    "pydantic-ai>=1.24.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
